backup_individuals/sjeng/use_undefined_identifier/c0/l_knight_mobility
/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/l_knight_mobility/src/leval.c:533:12: error: use of undeclared identifier 'l_knight_mobility_knight_o'
if ( board[l_knight_mobility_knight_o[d] + square] == 13 ) 
           ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O0/sjeng-clang-O0/l_knight_mobility/src/obj/leval.o] Error 1
